--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^13.8.1"
+    "currency-system": "^2.6.53",
+    "discord.js": "^13.8.1",
+    "mongoose": "^6.4.4"
   }
 }
