--- a/package.json
+++ b/package.json
@@ -14,8 +14,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/opus": "^0.8.0",
+    "@discordjs/voice": "^0.11.0",
+    "@distube/spotify": "^1.3.1",
+    "@distube/yt-dlp": "^1.1.3",
     "currency-system": "^2.6.53",
     "discord.js": "^13.8.1",
+    "distube": "^3.3.2",
+    "ffmpeg-static": "^4.4.1",
+    "libsodium-wrappers": "^0.7.10",
     "mongoose": "^6.4.4",
     "moongose": "^1.0.0"
   }
