--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ffmpeg-static": "^4.4.1",
     "libsodium-wrappers": "^0.7.10",
     "mongoose": "^6.4.4",
-    "moongose": "^1.0.0"
+    "moongose": "^1.0.0",
+    "simply-djs": "^3.0.2"
   }
 }
