--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "^0.8.0",
+    "@discordjs/rest": "^1.0.1",
     "@discordjs/voice": "^0.11.0",
     "@distube/spotify": "^1.3.1",
     "@distube/yt-dlp": "^1.1.3",
