--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "@discordjs/voice": "^0.11.0",
     "@distube/spotify": "^1.3.1",
     "@distube/yt-dlp": "^1.1.3",
+    "@distube/ytdl-core": "^4.11.4",
     "currency-system": "^2.6.53",
     "discord.js": "^13.8.1",
     "distube": "^3.3.2",
     "ffmpeg-static": "^4.4.1",
+    "install": "^0.13.0",
     "libsodium-wrappers": "^0.7.10",
     "mongoose": "^6.4.4",
     "moongose": "^1.0.0",
+    "npm": "^8.18.0",
     "simply-djs": "^3.0.2"
   }
 }
