--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/builders": "^0.12.0",
+    "@discordjs/builders": "^1.1.0",
+    "@discordjs/collection": "^1.0.1",
     "@discordjs/opus": "^0.8.0",
-    "@discordjs/rest": "^0.3.0",
+    "@discordjs/rest": "^1.0.1",
     "@discordjs/voice": "^0.11.0",
     "@distube/spotify": "^1.3.1",
     "@distube/yt-dlp": "^1.1.3",
